--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <h1
                 class="text-5xl md:text-7xl font-bold tracking-tight mb-6 bg-clip-text text-transparent bg-gradient-to-b from-white to-white/60">
-                The Founding<br>Hackathon.
+                TU Berlin<br>Hackathon.
             </h1>
 
             <div
@@ -76,7 +76,7 @@
                 <div class="hidden sm:block w-px h-4 bg-white/10"></div>
                 <div class="flex items-center gap-2">
                     <i data-lucide="map-pin" class="w-4 h-4 text-neutral-400"></i>
-                    <span>EB 123</span>
+                    <span>tba</span>
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
     <footer class="border-t border-border py-12">
         <div
             class="max-w-5xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-sm text-neutral-500">
-            <p>&copy; 2025 DevClub. Built by students.</p>
+            <p>&copy; 2025 DevClub. Built by students. Kontakt: </p>
             <div class="flex gap-6 mt-4 md:mt-0">
                 <a href="#" class="hover:text-white">Discord</a>
                 <a href="#" class="hover:text-white">GitHub</a>
