--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevClub | The Founding Hackathon</title>
+    <title>DevClub | TU Hackathon</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,9 +43,10 @@
     </style>
 </head>
 
-<body class="bg-background text-white font-sans antialiased selection:bg-white selection:text-black">
+<body
+    class="bg-background text-white font-sans antialiased selection:bg-white selection:text-black min-h-screen flex flex-col">
 
-    <main class="relative pt-32 pb-20 overflow-hidden">
+    <main class="flex-1 relative pt-32 pb-20 overflow-hidden">
         <div class="absolute inset-0 bg-grid z-0 mask-gradient"></div>
         <div class="absolute top-0 left-1/2 -translate-x-1/2 w-[600px] h-[400px] hero-glow blur-3xl opacity-50 z-0">
         </div>
@@ -66,7 +67,7 @@
                 class="inline-flex flex-wrap justify-center items-center gap-4 sm:gap-6 mb-10 px-6 py-3 rounded-full bg-white/5 border border-white/10 text-sm font-medium text-neutral-300 hover:bg-white/10 transition-colors">
                 <div class="flex items-center gap-2">
                     <i data-lucide="calendar" class="w-4 h-4 text-neutral-400"></i>
-                    <span>2. Feb 2026</span>
+                    <span>??. Jan 2026</span>
                 </div>
                 <div class="hidden sm:block w-px h-4 bg-white/10"></div>
                 <div class="flex items-center gap-2">
@@ -101,7 +102,8 @@
                 </button>
             </form>
             <div id="newsletter-status"
-                class="hidden mt-4 text-center p-4 rounded-lg bg-white/5 border border-white/10 text-neutral-300"></div>
+                class="hidden mt-4 text-center p-4 rounded-lg bg-white/5 border border-white/10 text-neutral-300 w-full max-w-sm mx-auto">
+            </div>
         </div>
     </main>
 
