--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="hidden sm:block w-px h-4 bg-white/10"></div>
                 <div class="flex items-center gap-2">
                     <i data-lucide="clock" class="w-4 h-4 text-neutral-400"></i>
-                    <span>16:00 Uhr</span>
+                    <span>??:?? Uhr</span>
                 </div>
                 <div class="hidden sm:block w-px h-4 bg-white/10"></div>
                 <div class="flex items-center gap-2">
@@ -82,11 +82,13 @@
             </div>
 
             <p class="text-lg text-neutral-400 max-w-2xl mx-auto mb-10 leading-relaxed">
-                Wir gründen den ersten studentischen Dev Club der TU Berlin!
+                Sei Teil des ersten studentischen Dev Club der TU Berln!
                 <br>
-                [Was wir machen und maybe Tracks mentionen]: 8 Stunden werden wir ...
+                [insert an wen]
                 <br>
-                [Wer]: Ob du ... (Designer, Coder / Hacker / Prgrammierer)
+                [insert was wir machen]
+                <br>
+                [insert was wir machen]
                 <br>
                 Komm vorbei!
             </p>
@@ -113,7 +115,7 @@
             <p>&copy; 2025 DevClub. Built by students. Kontakt: </p>
             <div class="flex gap-6 mt-4 md:mt-0">
                 <a href="#" class="hover:text-white">Discord</a>
-                <a href="#" class="hover:text-white">GitHub</a>
+                <a href="https://github.com/TUBHack" class="hover:text-white">GitHub</a>
                 <a href="#" class="hover:text-white">Telegram</a>
             </div>
         </div>
